# hammadpy

./: .gitignore  README.md
.github/workflows/: rust.yml
__PyPi - Release/hammad-python/: setup.py
__PyPi - Release/hammad-python/hammadpy/: core.py
__PyPi - Release/rust-libhammadpy/libhammadpy-lightspeed/: Cargo.toml
__PyPi - Release/rust-libhammadpy/libhammadpy-lightspeed/src/: lib.rs
__legacy/hpy-nov2023/: LICENSE  README.md  __init__.py  hammock.py  setup.py
__legacy/hpy-nov2023/kit/: core.py
databases/db/: MAIN_aznz7tb5yorgzquh.seg  _MAIN_1.toc
notebooks/: hammadml1.ipynb  hammadpy.3.ipynb
notebooks/hpy3-scripts/: loader.py
release/hammad-ml/: setup.py
release/hammadml/: setup.py
release/hammadpy/: setup.py
release/meadow-non/: setup.py
release/monza/: setup.py
release/rust-libhammadpy/: RUST.md
release/rust-libhammadpy/libhammadpy_text/: Cargo.toml
release/rust-libhammadpy/libhammadpy_text/ist/: libhammadpy_text-0.1.10-cp39-cp39-macosx_10_12_x86_64.whl  libhammadpy_text-0.1.6-cp310-none-win_amd64.whl  libhammadpy_text-0.1.6-cp312-cp312-macosx_10_12_x86_64.whl  libhammadpy_text-0.1.6-cp39-cp39-macosx_10_12_x86_64.whl  libhammadpy_text-0.1.6-cp39-cp39-manylinux_2_34_x86_64.whl
release/rust-libhammadpy/libhammadpy_text/src/: lib.rs
release/suzuka/: setup.py
release/yosemite/: setup.py
tutorials/core-hammadpy/: artblocks.py  hammadpy.md  inputs.py  loaders.py  styles.py
tutorials/document-ai/: document.ai.ipynb  documentai.md
tutorials/documentai/: document.ai.ipynb  documentai.md  documentai.py  hammadpy.rag.ipynb
(+67 files in other folders)
