[package]
name = "libhammadpy-lightspeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libhammadpy_lightspeed"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
rayon = "1.6.1"
num_cpus = "1.15.0"
