[package]
name = "libhammadpy_text"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libhammadpy_text"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
colored = "2.0.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
